--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@textea/json-viewer": "^2.11.1",
+    "axios": "^1.2.0",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-speech-to-text": "^0.8.0",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
