--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fluentui/react-components": "^9.7.1",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.15",
+    "@react-navigation/material-bottom-tabs": "^6.2.7",
+    "@react-navigation/material-top-tabs": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +17,13 @@
     "axios": "^1.2.0",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-best-tabs": "^1.3.3",
     "react-dom": "^18.2.0",
+    "react-headless-tabs": "^6.0.3",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-native-paper": "^4.12.5",
+    "react-native-tab-view": "^3.3.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
     "web-vitals": "^2.1.4"
@@ -43,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
