--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-best-tabs": "^1.3.3",
+    "react-blink-text": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-headless-tabs": "^6.0.3",
     "react-hook-speech-to-text": "^0.8.0",
     "react-native-paper": "^4.12.5",
     "react-native-tab-view": "^3.3.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-notifications": "^1.7.4",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
     "web-vitals": "^2.1.4"
