--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@textea/json-viewer": "^2.11.1",
     "axios": "^1.2.0",
     "cors": "^2.8.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-best-tabs": "^1.3.3",
     "react-blink-text": "^1.0.5",
